# YAIBA

./: README.md  pyproject.toml
ipynb_examples/: YAIBA Interactive Player Location Example.ipynb
yaiba/: __init__.py  constants.py
yaiba/log/: __init__.py  entries.py  pseudonymizer.py  session_log.py  session_log_csv.py  session_log_json.py  test_utils.py  types.py
yaiba/log/tests/: test_session_log_csv.py  test_session_log_json.py
yaiba/log/vrc/: __init__.py  parser.py  utils.py
yaiba/log/vrc/entries/: __init__.py  builtin.py  player_position.py  questionnaire.py  yodokoro_tag_marker.py
yaiba/log/vrc/entries/tests/: test_builtin.py  test_player_position.py  test_questionnaire.py  test_yodokoro_tag_marker.py
yaiba/log/vrc/tests/: test_parser.py
yaiba/visualization/vrc/: __init__.py
yaiba_colab/: __init__.py  storage.py
yaiba_scienceassembly/: README.md  __init__.py
