[tool.poetry]
name = "YAIBA"
version = "0.8.0"
description = "Yet Another Interactive Behavior Analysis tool for VRSNS."
authors = ["ScienceAssembly"]
license = "MIT"
packages = [
    { include = "yaiba" },
    { include = "yaiba_colab" }, # XXX: Better not to add here, consider to put under a new repo.
    { include = "yaiba_scienceassembly" }, # XXX: Better not to add here, consider to put under a new repo.
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
