[tool.poetry]
name = "YAIBA"
version = "0.8.1"
description = "Yet Another Interactive Behavior Analysis tool for VRSNS."
authors = ["ScienceAssembly"]
license = "MIT"
packages = [
    { include = "yaiba" },
    { include = "yaiba_colab" }, # XXX: Better not to add here, consider to put under a new repo.
    { include = "yaiba_scienceassembly" }, # XXX: Better not to add here, consider to put under a new repo.
]

[tool.poetry.dependencies]
python = "^3.8"
ipywidgets = { version = "^7.7.1", extras = ["visualize"] }
jupyter = { version = "^1.0.0", extras = ["visualize"] }
plotly = { version = "^5.9.0", extras = ["visualize"] }
jupyterlab = { version = "^3.4.4", extras = ["visualize"] }
pandas = { version = "^1.4.3", extras = ["visualize"] }

[tool.poetry.extras]
visualize = ["ipywidgets", "jupyter", "plotly", "jupyterlab", "pandas"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
