[tool.poetry]
name = "YAIBA"
version = "0.8.1"
description = "Yet Another Interactive Behavior Analysis tool for VRSNS."
authors = ["ScienceAssembly"]
license = "MIT"
packages = [
    { include = "yaiba" },
    { include = "yaiba_colab" }, # XXX: Better not to add here, consider to put under a new repo.
    { include = "yaiba_scienceassembly" }, # XXX: Better not to add here, consider to put under a new repo.
]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.visualize.dependencies]
ipywidgets = "^7.7.1"
jupyter =  "^1.0.0"
plotly = "^5.9.0"
jupyterlab = "^3.4.4"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
